# bundle

./: .gitignore  Cargo.toml  LICENSE.txt  MAN.md  README.md
docs/: book.toml
docs/src/: SUMMARY.md
docs/src/use_cases/: simple_pendulum.md
src/: file_info.rs  index.rs  lib.rs  main.rs
